--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "puppeteer-kabutan-article-scrapper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "func start",
     "run": "node run.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "2.1.1",
+    "puppeteer": "^8.0.0",
     "express": "^4.17.1",
     "body-parser": "^1.19.0"
   }
